--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "npm run build && gh-pages -d dist --repo https://github.com/cloudinformationmodel/documentation.git"
+    "deploy": "npm run build && gh-pages -d dist -t true --repo https://github.com/cloudinformationmodel/documentation.git"
   },
   "dependencies": {
     "@nuxt/content-theme-docs": "^0.7.1",
