--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/content-theme-docs": "^0.7.1",
+    "gh-pages": "^3.2.3",
     "nuxt": "^2.15.2"
   },
   "devDependencies": {
